--- a/notebooks/check_bpy.ipynb
+++ b/notebooks/check_bpy.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/SamsungSSD/workspace/yoshioka/rendering\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
@@ -13,9 +21,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color management: using fallback mode for management\n",
+      "Color management: Error could not find role data role.\n",
+      "BLT_lang_init: 'locale' data path for translations not found, continuing\n",
+      "Color management: scene view \"Filmic\" not found, setting default \"Standard\".\n",
+      "bpy: couldn't find 'scripts/modules', blender probably wont start.\n",
+      "Freestyle: couldn't find 'scripts/freestyle/modules', Freestyle won't work properly.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "blf_load_font_default: 'fonts' data path not found for 'droidsans.ttf', will not be able to display text\n",
+      "blf_load_font_default: 'fonts' data path not found for 'bmonofont-i18n.ttf', will not be able to display text\n",
+      "blf_load_font_default: 'fonts' data path not found for 'bmonofont-i18n.ttf', will not be able to display text\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bpy_types'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bpy_types'"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bpy_types'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bpy_types'"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR (bpy.rna): /Blender/blender/source/blender/python/intern/bpy_rna.c:7236 pyrna_srna_ExternalType: failed to find 'bpy_types' module\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bpy_types'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bpy_types'"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bpy_types'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bpy_types'"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR (bpy.rna): /Blender/blender/source/blender/python/intern/bpy_rna.c:7236 pyrna_srna_ExternalType: failed to find 'bpy_types' module\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bpy_types'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bpy_types'"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR (bpy.rna): /Blender/blender/source/blender/python/intern/bpy_rna.c:7236 pyrna_srna_ExternalType: failed to find 'bpy_types' module\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bpy_types'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bpy_types'"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR (bpy.rna): /Blender/blender/source/blender/python/intern/bpy_rna.c:7236 pyrna_srna_ExternalType: failed to find 'bpy_types' module\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bpy_types'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bpy_types'"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR (bpy.rna): /Blender/blender/source/blender/python/intern/bpy_rna.c:7236 pyrna_srna_ExternalType: failed to find 'bpy_types' module\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bpy_types'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bpy_types'"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR (bpy.rna): /Blender/blender/source/blender/python/intern/bpy_rna.c:7236 pyrna_srna_ExternalType: failed to find 'bpy_types' module\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m現在のセルまたは前のセルでコードを実行中に、カーネル (Kernel) がクラッシュしました。\n",
+      "\u001b[1;31mエラーの原因を特定するには、セル内のコードを確認してください。\n",
+      "\u001b[1;31m詳細については<a href='https://aka.ms/vscodeJupyterKernelCrash'>こちら</a>をクリックします。\n",
+      "\u001b[1;31m詳細については、Jupyter <a href='command:jupyter.viewOutput'>ログ</a> を参照してください。"
+     ]
+    }
+   ],
    "source": [
     "import bpy\n",
     "\n",
@@ -33,8 +196,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "render-hand",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
