--- a/notebooks/check_binfile.ipynb
+++ b/notebooks/check_binfile.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/SamsungSSD/workspace/yoshioka/rendering\n"
+      "/workspace\n"
      ]
     }
    ],
@@ -21,9 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'modules/ManipNet/Code/Tensorflow/Data/ManipNetBIN'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[1;32m      4\u001b[0m bindata \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m fp \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43msorted\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mPath\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmodules/ManipNet/Code/Tensorflow/Data/ManipNetBIN\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miterdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# print(fp)\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     bindata[fp\u001b[38;5;241m.\u001b[39mstem] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfromfile(fp)\n",
+      "File \u001b[0;32m/opt/conda/envs/py3.8/lib/python3.8/pathlib.py:1122\u001b[0m, in \u001b[0;36mPath.iterdir\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1120\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_closed:\n\u001b[1;32m   1121\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_raise_closed()\n\u001b[0;32m-> 1122\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_accessor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m:\n\u001b[1;32m   1123\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m'\u001b[39m}:\n\u001b[1;32m   1124\u001b[0m         \u001b[38;5;66;03m# Yielding a path object for these makes little sense\u001b[39;00m\n\u001b[1;32m   1125\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'modules/ManipNet/Code/Tensorflow/Data/ManipNetBIN'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from pathlib import Path\n",
@@ -36,36 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Decoder_b0 (107,)\n",
-      "Decoder_w0 (164352,)\n",
-      "DenseRes0_b0 (768,)\n",
-      "DenseRes0_w0 (1179648,)\n",
-      "DenseRes1_b0 (768,)\n",
-      "DenseRes1_w0 (1179648,)\n",
-      "DenseRes2_b0 (768,)\n",
-      "DenseRes2_w0 (1179648,)\n",
-      "DenseRes3_b0 (768,)\n",
-      "DenseRes3_w0 (1179648,)\n",
-      "Encoder0_b0 (256,)\n",
-      "Encoder0_w0 (49152,)\n",
-      "Encoder1_b0 (256,)\n",
-      "Encoder1_w0 (86016,)\n",
-      "Encoder2_b0 (256,)\n",
-      "Encoder2_w0 (466432,)\n",
-      "Xmean (1175,)\n",
-      "Xstd (1175,)\n",
-      "Ymean (107,)\n",
-      "Ystd (107,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for k, v in bindata.items():\n",
     "    print(k, v.shape)"
